--- a/catalogo.html
+++ b/catalogo.html
@@ -16,64 +16,38 @@
 
 <body>
 
+    <nav>
+        <h1>CATALOGO</h1>
+    </nav>
  
 
-    <section id="catalogo">
-
-        
-        <h2>Catálogo de Libros</h2>
-
-
-
-        <!-- Sección 1 -->
-
-        <div class="seccion-catalogo">
-
-            <h3>Sección 1</h3>
-
-            <img src="imagenes/Este-dolor-no-es-mío.webp" alt="Libro 1">
-
-            <img src="imagenes/Habitos-atomicos.webp" alt="Libro 2">
-
-            <img src="imagenes/Terapia-Para-Llevar.webp" alt="Libro 3">
-
-        </div>
+    <section class="grid-section">
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 4"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 5"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 6"></div>
 
     </section>
 
-    <section id="catalogo">
 
-        <!-- Sección 2 -->
+    </section> <section class="grid-section">
 
-        <div class="seccion-catalogo">
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 1"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 2"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 3"></div>
 
-            <h3>Sección 2</h3>
+    </section>    
 
-            <img src="imagenes/Holly.webp" alt="Libro 4">
 
-            <img src="imagenes/La-cinta-roja.webp" alt="Libro 5">
-
-            <img src="imagenes/La-Hipotesis-del-Amor.webp" alt="Libro 6">
-
-        </div>
-
+    <section class="grid-section">
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 4"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 5"></div>
+        <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 6"></div>
     </section>
 
-    <section id="catalogo">
 
-        <!-- Sección 3 -->
 
-        <div class="seccion-catalogo">
-
-            <h3>Sección 3</h3>
-
-            <img src="imagenes/Ligthlark.webp" alt="Libro 7">
-
-            <img src="imagenes/Punto-ciego.webp" alt="Libro 8">
-
-            <img src="imagenes/Noventera.webp" alt="Libro 9">
-
-        </div>
+    </section>
+    
 
         <button onclick="window.location.href='index.html'">Volver al Menú Principal</button>
 
