--- a/catalogo.html
+++ b/catalogo.html
@@ -29,13 +29,14 @@
     </section>
 
 
-    </section> <section class="grid-section">
+    <section class="grid-section">
 
         <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 1"></div>
         <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 2"></div>
         <div class="grid-item"><img src="./imagenes/Alas de Hierro.webp" alt="Imagen 3"></div>
 
-    </section>    
+    </section>
+        
 
 
     <section class="grid-section">
