--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Libros Destacados - Mi Biblioteca</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <div class="libro-destacado">
             <div class="imagen">
-                <img src="imagenes/Siempre-has-Sido-tú.webp" alt="Libro Destacado 1">
+                <img src="../imagenes/Siempre-has-Sido-tú.webp" alt="Libro Destacado 1">
             </div>
             <div class="informacion">
                 <h3>Libro Destacado 1</h3>
@@ -23,7 +23,7 @@
 
         <div class="libro-destacado">
             <div class="imagen">
-                <img src="imagenes/El-Instinto-Científico.webp" alt="Libro Destacado 2">
+                <img src="../imagenes/El-Instinto-Científico.webp" alt="Libro Destacado 2">
             </div>
             <div class="informacion">
                 <h3>Libro Destacado 2</h3>
@@ -33,7 +33,7 @@
 
         <div class="libro-destacado">
             <div class="imagen">
-                <img src="imagenes/Generacion-Dopamina.webp" alt="Libro Destacado 3">
+                <img src="../imagenes/Generacion-Dopamina.webp" alt="Libro Destacado 3">
             </div>
             <div class="informacion">
                 <h3>Libro Destacado 3</h3>
