--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Novedades - Mi Biblioteca</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <h3>Novedad 1</h3>
                 <p>Una doncella… Elegida desde su nacimiento para dar comienzo a una nueva era, la vida de Poppy nunca le ha pertenecido. La vida de la Doncella es solitaria. Jamás la tocarán. Jamás la mirarán. Jamás le hablarán. Jamás sentirá placer. Mientras espera el día de su Ascensión.</p>
             </div>
-            <img src="imagenes/De-Sangre-y-Cenizas.webp" alt="Novedad 1">
+            <img src="../imagenes/De-Sangre-y-Cenizas.webp" alt="Novedad 1">
         </div>
 
         <div class="libro-novedad">
@@ -24,7 +24,7 @@
                 <h3>Novedad 2</h3>
                 <p>Cuando Elec rompio conmigo, lo ultimo que necesitaba era convertirme en vecina de alguien que me recordara a el. Damien era una version mas atractiva de mi ex. Tambien tenia dos perros gigantes que me mantenian despierta con sus ladridos. El no queria tener nada que ver conmigo.</p>
             </div>
-            <img src="imagenes/Querido-Vecino.webp" alt="Novedad 2">
+            <img src="../imagenes/Querido-Vecino.webp" alt="Novedad 2">
         </div>
 
         <div class="libro-novedad">
@@ -32,7 +32,7 @@
                 <h3>Novedad 3</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
-            <img src="imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
         </div>
 
         <!-- Agrega más novedades según sea necesario -->
