--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       
         <ul>
 
-            <li><a href="libros_destacados.html">Libros Destacados</a></li>
+            <li><a href="./pages/libros_destacados.html">Libros Destacados</a></li>
 
-            <li><a href="catalogo.html">Catálogo</a></li>
+            <li><a href="./pages/catalogo.html">Catálogo</a></li>
 
-            <li><a href="novedades.html">Novedades</a></li>
+            <li><a href="./pages/novedades.html">Novedades</a></li>
 
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
 
         </ul>
 
