--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -50,7 +50,7 @@
     </section>
     
 
-        <button onclick="window.location.href='index.html'">Volver al Menú Principal</button>
+        <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
 
     </section>
 
