--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row justify-content-center mt-3">
         <div class="col-md-6">
-            <a href="index.html" class="btn btn-secondary">Volver al Menu Principal</a>
+            <a href="../index.html" class="btn btn-secondary">Volver al Menu Principal</a>
         </div>
     </div>
 </div>
