--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -43,7 +43,7 @@
 
         <!-- Agregar más libros destacados según sea necesario -->
 
-        <button onclick="window.location.href='index.html'">Volver al Menú Principal</button>
+        <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
     </section>
 
 </body>
