--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -39,7 +39,7 @@
         
     </section>
 
-    <button onclick="window.location.href='index.html'">Volver al Menú Principal</button>
+    <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
 
 </body>
 </html>
