--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -55,7 +55,11 @@
     </section>
 
  
+    <footer>
 
+        <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
+
+    </footer>
         
 
     
