--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,6 +37,12 @@
     </div>
 </div>
 
+<footer>
+
+    <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
+
+</footer>
+
 
 </body>
 </html>
