--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -46,5 +46,12 @@
         <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
     </section>
 
+
+    <footer>
+
+        <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
+
+    </footer>
+
 </body>
 </html>
