--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -41,6 +41,12 @@
 
     <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
 
+    <footer>
+
+        <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
+
+    </footer>
+
 </body>
 </html>
 
