--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -49,6 +49,14 @@
 
     <footer>
 
+        <div class="social">
+            <img src="../imagenes/FacebookBlanco.png" alt="">
+            <img src="../imagenes/TwitterBlanco.png" alt="">
+            <img src="../imagenes/InstagramBlanco.png" alt="">
+
+
+        </div>
+
         <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
 
     </footer>
