--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -43,6 +43,15 @@
 
     <footer>
 
+        <div class="social">
+            <img src="../imagenes/FacebookBlanco.png" alt="">
+            <img src="../imagenes/TwitterBlanco.png" alt="">
+            <img src="../imagenes/InstagramBlanco.png" alt="">
+
+
+        </div>
+        
+
         <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
 
     </footer>
