--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Novedades - Mi Biblioteca</title>
 </head>
-<body>
+<body class="nov">
 
     <section id="novedades" class="container">
         <h2>Últimas Novedades</h2>
