--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 </head>
 
-<body>
+<body class="bodyindex">
 
  
 
-    <header>
+    <header class="index">
 
         <h1>Mi Biblioteca</h1>
 
