--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,49 +1,65 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="container mt-5">
-    <h1 class="text-center mb-5">Formulario de Contacto</h1>
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form action="#" method="post">
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+    <section class="contact">
+        <div class="contact__image-wrapper">
+            <img src="../imagenes/image.jpg" alt="" class="contact__image">
+        </div>
+        <div class="contact__right-side">
+            <h1 class="contact__title">Contacto</h1>
+            <form action="" class="contact__form-wrapper">
+                <div class="contact__input-line">
+                    <label for="name" class="contact__label">Nombre</label>
+                    <input type="text" name="name" id="name" class="contact__input">
                 </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Correo Electrónico:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+                <div class="contact__input-line">
+                    <label for="email" class="contact__label">Email</label>
+                    <input type="email" name="email" id="email" class="contact__input">
                 </div>
-                <div class="mb-3">
-                    <label for="mensaje" class="form-label">Mensaje:</label>
-                    <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
+                <div class="contact__input-line">
+                    <label for="subject" class="contact__label">Subject</label>
+                    <input type="text" name="subject" id="subject" class="contact__input">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+                <div class="contact__input-line">
+                    <label for="message" class="contact__label">Mensaje</label>
+                    <textarea type="text" name="message" id="message" class="contact__input--textarea"></textarea>
+                </div>
+                <input type="submit" value="Enviar Mensaje" class="contact__submit-button">
             </form>
         </div>
+
+
+    </section>
+
+
+    <div>
+
+    <button onclick="window.location.href='../index.html'">Volver al Menú Principal</button>
+    
     </div>
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-6">
-            <a href="../index.html" class="btn btn-secondary">Volver al Menu Principal</a>
+
+    <footer>
+
+        <div class="social">
+            <img src="../imagenes/FacebookBlanco.png" alt="">
+            <img src="../imagenes/TwitterBlanco.png" alt="">
+            <img src="../imagenes/InstagramBlanco.png" alt="">
+
+
         </div>
-    </div>
-</div>
 
-<footer>
+        <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
 
 
-    <p>&copy; 2024 Mi Biblioteca. Todos los derechos reservados.</p>
-
-</footer>
 
 
+    
 </body>
 </html>
