separarheader+ajustelibrosdestadacos+novedades

--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -8,8 +8,14 @@
 </head>
 <body>
 
-    <section id="libros-destacados" class="container">
+    <header>
+
         <h2>Libros Destacados</h2>
+
+    </header>
+
+    <section id="libros-destacados" class="container">
+        
 
         <div class="libro-destacado">
             <div class="imagen">
