--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -8,8 +8,14 @@
 </head>
 <body class="nov">
 
+    <header>
+
+        <h2 class="h2nov">Últimas Novedades</h2>
+
+    </header>
+
     <section id="novedades" class="container">
-        <h2>Últimas Novedades</h2>
+        
 
         <div class="libro-novedad">
             <div class="informacion">
