mas imagenes + detalle pages

--- a/index.html
+++ b/index.html
@@ -75,6 +75,44 @@
 
     </section>
 
+    <section id="imagenes">
+
+        <img src="imagenes/Alas de Hierro.webp" 
+        alt="Imagen 1">
+
+
+        <img src="imagenes/Como_Hacer_que_te Pasen_Cosas_Buenas.webp" alt="Imagen 2">
+
+
+        <img src="imagenes/El-Odio-a-los-Ricos.webp" alt="Imagen 3">
+
+
+        <img src="imagenes/Encuentra-tu-Persona-Vitamina.webp" alt="Imagen 4">
+
+    
+ 
+
+    </section>
+
+    <section id="imagenes">
+
+        <img src="imagenes/Alas de Hierro.webp" 
+        alt="Imagen 1">
+
+
+        <img src="imagenes/Como_Hacer_que_te Pasen_Cosas_Buenas.webp" alt="Imagen 2">
+
+
+        <img src="imagenes/El-Odio-a-los-Ricos.webp" alt="Imagen 3">
+
+
+        <img src="imagenes/Encuentra-tu-Persona-Vitamina.webp" alt="Imagen 4">
+
+    
+ 
+
+    </section>
+
 
  
 
