agrego hover, estilos

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -60,6 +60,46 @@
             <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
         </div>
 
+        <div class="libro-novedad">
+            <div class="informacion">
+                <h3>Novedad 3</h3>
+                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+            </div>
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+        </div>
+
+        <div class="libro-novedad">
+            <div class="informacion">
+                <h3>Novedad 3</h3>
+                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+            </div>
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+        </div>
+
+        <div class="libro-novedad">
+            <div class="informacion">
+                <h3>Novedad 3</h3>
+                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+            </div>
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+        </div>
+
+        <div class="libro-novedad">
+            <div class="informacion">
+                <h3>Novedad 3</h3>
+                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+            </div>
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+        </div>
+
+        <div class="libro-novedad">
+            <div class="informacion">
+                <h3>Novedad 3</h3>
+                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+            </div>
+            <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
+        </div>
+
         <!-- Agrega más novedades según sea necesario -->
         
     </section>
