--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -44,12 +44,12 @@
             <p class="description">Descripción del artículo 1...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 4">
+            <img src="../imagenes/Kokoro.webp" alt="Artículo 4">
             <h3>Artículo 4</h3>
             <p class="description">Descripción del artículo 4...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 7">
+            <img src="../imagenes/Holly.webp" alt="Artículo 7">
             <h3>Artículo 7</h3>
             <p class="description">Descripción del artículo 7...</p>
         </div>
@@ -58,17 +58,17 @@
     <!-- Columna 2 -->
     <div class="column">
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 2">
+            <img src="../imagenes/Hierba.webp" alt="Artículo 2">
             <h3>Artículo 2</h3>
             <p class="description">Descripción del artículo 2...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 5">
+            <img src="../imagenes/Colmillo Blanco.webp" alt="Artículo 5">
             <h3>Artículo 5</h3>
             <p class="description">Descripción del artículo 5...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 8">
+            <img src="../imagenes/Divina-Comedia.webp" alt="Artículo 8">
             <h3>Artículo 8</h3>
             <p class="description">Descripción del artículo 8...</p>
         </div>
@@ -77,17 +77,17 @@
     <!-- Columna 3 -->
     <div class="column">
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 3">
+            <img src="../imagenes/El método-Silva-de-control-mental.webp" alt="Artículo 3">
             <h3>Artículo 3</h3>
             <p class="description">Descripción del artículo 3...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 6">
+            <img src="../imagenes/El-Banquete.webp" alt="Artículo 6">
             <h3>Artículo 6</h3>
             <p class="description">Descripción del artículo 6...</p>
         </div>
         <div class="item">
-            <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 9">
+            <img src="../imagenes/El-Kybalión.webp" alt="Artículo 9">
             <h3>Artículo 9</h3>
             <p class="description">Descripción del artículo 9...</p>
         </div>
