--- a/index.html
+++ b/index.html
@@ -122,8 +122,24 @@
 
     </section>
 
-    
+    <div class="banner2">
 
+    <img src="/imagenes/banner2.webp" 
+    alt="Imagen 1">
+
+    </div>
+
+    <section class="video">
+
+        <div class="contenedor-video">
+            <video width="100%" height="100%" autoplay loop muted>
+                <source src="./video/Cinematic.mp4" type="video/mp4">
+                Tu navegador no soporta videos HTML5.
+            </video>
+        </div>
+
+    </section>
+    
 
  
 
