--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -40,12 +40,12 @@
     <div class="column">
         <div class="item">
             <img src="../imagenes/Alas de Hierro.webp" alt="Artículo 1">
-            <h3>Artículo 1</h3>
-            <p class="description">Descripción del artículo 1...</p>
+            <h3>Alas de Hierro</h3>
+            <p class="description">Ciencia Ficción</p>
         </div>
         <div class="item">
             <img src="../imagenes/Kokoro.webp" alt="Artículo 4">
-            <h3>Artículo 4</h3>
+            <h3>Hierba</h3>
             <p class="description">Descripción del artículo 4...</p>
         </div>
         <div class="item">
