--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -75,6 +75,27 @@
     </section>
 
 
+    <div class="carrusel">
+        <a href="#img1" class="carrusel-item" id="img1">
+            <img src="../imagenes/Siempre-has-Sido-tú.webp" alt="Imagen 1">
+        </a>
+        <a href="#img2" class="carrusel-item" id="img2">
+            <img src="../imagenes/El-Instinto-Científico.webp" alt="Imagen 2">
+        </a>
+        <a href="#img3" class="carrusel-item" id="img3">
+            <img src="../imagenes/Generacion-Dopamina.webp" alt="Imagen 3">
+        </a>
+        <!-- Navegación -->
+        <div class="carrusel-nav">
+            <a href="#img1">1</a>
+            <a href="#img2">2</a>
+            <a href="#img3">3</a>
+        </div>
+    </div>
+    
+    
+
+
     <footer>
 
         <div class="social">
