--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,7 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artículos en Venta</title>
+    
+    <!--ícono de la pestaña-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!--ícono de la pestaña-->
+
+    <!--descripción del sitio-->
+
+    <meta name="description" content="Nuestro extenso catálogo te ofrece una variedad inigualable de libros en todos los géneros. Busca, explora y encuentra exactamente lo que necesitas para tu próxima gran lectura">
+
+    <!--descripción del sitio-->
+
+    <!--keywords / palabras claves-->
+
+    <meta name="keywords" content="Librería en línea,Catálogo de libros, Géneros variados, Amantes de la lectura, Colecciones exclusivas libros, Libros imprescindibles para leer">
+
+    <!--keywords / palabras claves-->
+
+    <!--opengraph-->
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Nuestro extenso catálogo te ofrece una variedad inigualable de libros en todos los géneros. Busca, explora y encuentra exactamente lo que necesitas para tu próxima gran lectura">
+    <meta property="og:title" content="Catálogo Completo - Explora Nuestro Amplio Rango de Libros">
+    <!--opengraph-->
+
+    <title>Catálogo Completo - Explora Nuestro Amplio Rango de Libros</title>
     <link rel="stylesheet" href="../css/style.css">
     
 </head>
