--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!--ícono de la pestaña-->
+     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+     <!--ícono de la pestaña-->
+ 
+     <!--descripción del sitio-->
+ 
+     <meta name="description" content="Conéctate con nosotros para cualquier consulta o soporte. Nuestro equipo está listo para ayudarte en tu experiencia de compra de libros y resolver tus dudas">
+ 
+     <!--descripción del sitio-->
+ 
+     <!--keywords / palabras claves-->
+ 
+     <meta name="keywords" content="Información de contacto librería, Atención al cliente libros, Soporte librería en línea, Consultas compra de libros, Contacto para amantes de la lectura">
+ 
+     <!--keywords / palabras claves-->
+ 
+     <!--opengraph-->
+     <meta property="og:image" content="">
+     <meta property="og:description" content="Conéctate con nosotros para cualquier consulta o soporte. Nuestro equipo está listo para ayudarte en tu experiencia de compra de libros y resolver tus dudas">
+     <meta property="og:title" content="Contacta con Nosotros - Asistencia y Soporte de Librería">
+     <!--opengraph-->
+
     <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto</title>
+    <title>Contacta con Nosotros - Asistencia y Soporte de Librería</title>
 </head>
 <body>
 
