--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -3,8 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--ícono de la pestaña-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!--ícono de la pestaña-->
+
+    <!--descripción del sitio-->
+
+    <meta name="description" content="Mantente al día con las últimas novedades del mundo literario. Aquí encontrarás los recién llegados y los próximos grandes éxitos que no te puedes perder">
+
+    <!--descripción del sitio-->
+
+    <!--keywords / palabras claves-->
+
+    <meta name="keywords" content="Últimos lanzamientos libros, Novedades literarias, Recién publicados libros, Próximos lanzamientos editoriales, Actualizaciones catálogo libros">
+
+    <!--keywords / palabras claves-->
+
+    <!--opengraph-->
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Mantente al día con las últimas novedades del mundo literario. Aquí encontrarás los recién llegados y los próximos grandes éxitos que no te puedes perder">
+    <meta property="og:title" content="Novedades Literarias - Últimos Lanzamientos y Próximas Publicaciones">
+    <!--opengraph-->
+
+
     <link rel="stylesheet" href="../css/style.css">
-    <title>Novedades - Mi Biblioteca</title>
+    <title>Novedades Literarias - Últimos Lanzamientos y Próximas Publicaciones</title>
 </head>
 <body class="nov">
 
