--- a/index.html
+++ b/index.html
@@ -8,10 +8,32 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--ícono de la pestaña-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!--ícono de la pestaña-->
+
+    <!--descripción del sitio-->
+
+    <meta name="description" content="Explora nuestra amplia selección de libros en diversos géneros. Encuentra las últimas novedades, bestsellers y joyas literarias. Ideal para amantes de la lectura y búsqueda de conocimiento.">
+
+    <!--descripción del sitio-->
+
+    <!--keywords / palabras claves-->
+
+    <meta name="keywords" content="Libros bestsellers, Lectura y conocimiento, Joyas literarias, Libros populares, Amantes de la lectura">
+
+    <!--keywords / palabras claves-->
+
+    <!--opengraph-->
+    <meta property="og:image" content="">
+    <meta property="og:description" content="Explora nuestra amplia selección de libros en diversos géneros. Encuentra las últimas novedades, bestsellers y joyas literarias. Ideal para amantes de la lectura y búsqueda de conocimiento">
+    <meta property="og:title" content="Catálogo en Línea de Libros Destacados y Novedades">
+    <!--opengraph-->
+
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>Mi Biblioteca</title>
+    <title>Catálogo en Línea de Libros Destacados y Novedades</title>
 
 </head>
 
