se modfica novedades y se ajusta estilo

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -62,7 +62,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 1</h3>
+                <h3>De sangre y Cenizas</h3>
                 <p>Una doncella… Elegida desde su nacimiento para dar comienzo a una nueva era, la vida de Poppy nunca le ha pertenecido. La vida de la Doncella es solitaria. Jamás la tocarán. Jamás la mirarán. Jamás le hablarán. Jamás sentirá placer. Mientras espera el día de su Ascensión.</p>
             </div>
             <img src="../imagenes/De-Sangre-y-Cenizas.webp" alt="Novedad 1">
@@ -70,7 +70,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 2</h3>
+                <h3>Querido Vecino</h3>
                 <p>Cuando Elec rompio conmigo, lo ultimo que necesitaba era convertirme en vecina de alguien que me recordara a el. Damien era una version mas atractiva de mi ex. Tambien tenia dos perros gigantes que me mantenian despierta con sus ladridos. El no queria tener nada que ver conmigo.</p>
             </div>
             <img src="../imagenes/Querido-Vecino.webp" alt="Novedad 2">
@@ -78,7 +78,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>El Año de Gracia</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/El-año-de-Gracia.webp" alt="Novedad 3">
@@ -86,7 +86,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>Invernando</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/Invernando.webp" alt="Novedad 3">
@@ -94,7 +94,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>Steve Jobs</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/teve-Jobs.webp" alt="Novedad 3">
@@ -102,7 +102,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>Terapia Para Llevar</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/Terapia-Para-Llevar.webp" alt="Novedad 3">
@@ -110,7 +110,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>Sin Dramas</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/sin-dramas.webp" alt="Novedad 3">
@@ -118,7 +118,7 @@
 
         <div class="libro-novedad">
             <div class="informacion">
-                <h3>Novedad 3</h3>
+                <h3>Siddharta</h3>
                 <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
             </div>
             <img src="../imagenes/Siddharta.webp" alt="Novedad 3">
