se agregan imagenes y algunos estilos

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -64,11 +64,11 @@
         </div>
 
         <div class="imgizq">
-            <img src="../imagenes/La-Odisea.webp" alt="Imagen Izquierda">
+            <img src="../imagenes/Reír-en-Serio.webp" alt="Imagen Izquierda">
         </div>
 
         <div class="imgizq">
-            <img src="../imagenes/La-Odisea.webp" alt="Imagen Izquierda">
+            <img src="../imagenes/La-maleta-roja-de-Celeste.webp" alt="Imagen Izquierda">
         </div>
         
     </section>
@@ -105,7 +105,7 @@
         <div class="libro-novedad">
             <div class="informacion">
                 <h3>Invernando</h3>
-                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+                <p>Un viaje introspectivo y misterioso que teje realidades alternas y emociones profundas. 'Invernando' te lleva a un mundo donde los sueños y la realidad se entrelazan, revelando secretos inesperados sobre la naturaleza humana.</p>
             </div>
             <img src="../imagenes/Invernando.webp" alt="Novedad 3">
         </div>
@@ -113,7 +113,7 @@
         <div class="libro-novedad">
             <div class="informacion">
                 <h3>Steve Jobs</h3>
-                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+                <p>Esta biografía no oficial de Steve Jobs nos sumerge en la mente de un visionario. Desde sus humildes comienzos hasta su ascenso como ícono de la tecnología, este libro es una exploración fascinante de la perseverancia, innovación y el legado de un genio.</p>
             </div>
             <img src="../imagenes/teve-Jobs.webp" alt="Novedad 3">
         </div>
@@ -121,7 +121,7 @@
         <div class="libro-novedad">
             <div class="informacion">
                 <h3>Terapia Para Llevar</h3>
-                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+                <p>Un manual esencial para el bienestar emocional, 'Terapia Para Llevar' ofrece consejos prácticos y accesibles para manejar el estrés diario. A través de sus páginas, aprenderás técnicas valiosas para mejorar tu salud mental y emocional en la vida cotidiana.</p>
             </div>
             <img src="../imagenes/Terapia-Para-Llevar.webp" alt="Novedad 3">
         </div>
@@ -129,7 +129,7 @@
         <div class="libro-novedad">
             <div class="informacion">
                 <h3>Sin Dramas</h3>
-                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+                <p>Con humor y sabiduría, 'Sin Dramas' te muestra cómo navegar por las complejidades de las relaciones modernas. Desde amistades hasta el amor, este libro ofrece perspectivas refrescantes para evitar conflictos innecesarios y fomentar la armonía en tu vida.</p>
             </div>
             <img src="../imagenes/sin-dramas.webp" alt="Novedad 3">
         </div>
@@ -137,7 +137,7 @@
         <div class="libro-novedad">
             <div class="informacion">
                 <h3>Siddharta</h3>
-                <p>En el condado de Garner, donde está prohibido hablar del "año de gracia", las niñas crecen convencidas de que al alcanzar la adolescencia su piel exhala una potente esencia de juventud que, gracias a sus poderes afrodisíacos, es capaz de seducir a los hombres y matar de celos a las mujeres.</p>
+                <p>Una obra maestra de la literatura espiritual, 'Siddharta' narra la búsqueda de un joven por el significado de la vida. A través de su viaje, exploramos temas de renuncia, iluminación y la búsqueda de la paz interior, en un relato atemporal que ha inspirado a generaciones.</p>
             </div>
             <img src="../imagenes/Siddharta.webp" alt="Novedad 3">
         </div>
@@ -156,11 +156,11 @@
     </div>
 
     <div class="imgder">
-        <img src="../imagenes/rankenstein.webp" alt="Imagen Izquierda">
+        <img src="../imagenes/Mira-pez.webp" alt="Imagen Izquierda">
     </div>
 
     <div class="imgder">
-        <img src="../imagenes/rankenstein.webp" alt="Imagen Izquierda">
+        <img src="../imagenes/Twisted-Hate.webp" alt="Imagen Izquierda">
     </div>
 
     </section>
