--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -58,6 +58,12 @@
     </header>
 </header>
 
+<div>
+
+    <img src="../imagenes/banner3.webp" alt="">
+   
+</div>
+
 <div class="container">
     <!-- Columna 1 -->
     <div class="column">
@@ -68,12 +74,12 @@
         </div>
         <div class="item">
             <img src="../imagenes/Kokoro.webp" alt="Artículo 4">
-            <h3>Hierba</h3>
+            <h3>Kokoro</h3>
             <p class="description">Descripción del artículo 4...</p>
         </div>
         <div class="item">
             <img src="../imagenes/Holly.webp" alt="Artículo 7">
-            <h3>Artículo 7</h3>
+            <h3>Holly</h3>
             <p class="description">Descripción del artículo 7...</p>
         </div>
     </div>
@@ -82,17 +88,17 @@
     <div class="column">
         <div class="item">
             <img src="../imagenes/Hierba.webp" alt="Artículo 2">
-            <h3>Artículo 2</h3>
+            <h3>Hierba</h3>
             <p class="description">Descripción del artículo 2...</p>
         </div>
         <div class="item">
             <img src="../imagenes/Colmillo Blanco.webp" alt="Artículo 5">
-            <h3>Artículo 5</h3>
+            <h3>Colmillo Blanco</h3>
             <p class="description">Descripción del artículo 5...</p>
         </div>
         <div class="item">
             <img src="../imagenes/Divina-Comedia.webp" alt="Artículo 8">
-            <h3>Artículo 8</h3>
+            <h3>Divina Comedia</h3>
             <p class="description">Descripción del artículo 8...</p>
         </div>
     </div>
@@ -101,21 +107,27 @@
     <div class="column">
         <div class="item">
             <img src="../imagenes/El método-Silva-de-control-mental.webp" alt="Artículo 3">
-            <h3>Artículo 3</h3>
+            <h3>El método Silva de control mental</h3>
             <p class="description">Descripción del artículo 3...</p>
         </div>
         <div class="item">
             <img src="../imagenes/El-Banquete.webp" alt="Artículo 6">
-            <h3>Artículo 6</h3>
+            <h3>El Banquete</h3>
             <p class="description">Descripción del artículo 6...</p>
         </div>
         <div class="item">
             <img src="../imagenes/El-Kybalión.webp" alt="Artículo 9">
-            <h3>Artículo 9</h3>
+            <h3>El Kybalión</h3>
             <p class="description">Descripción del artículo 9...</p>
         </div>
     </div>
 </div>
+
+    <div>
+
+        <img src="../imagenes/banner.5.webp" alt="">
+
+    </div>
 
 <button onclick="location.href='../index.html'">Volver al Menú Principal</button>
 
