se agrega lista de categoría

--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -57,6 +57,39 @@
 
     </header>
 
+    <div class="boxlist">
+        <p class="subtitulofiltro">Categoría</p>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="divul">
+        <ul class="boxul">
+            <li class="boxli">Artes</li>
+            <li class="boxli">Biografías, Literatura Y Estudios Literarios</li>
+            <li class="boxli">Ciencias De La Tierra, Geogradía, Medioambiente, Planificación</li>
+            <li class="boxli">Computación Y Tecnología De La Información</li>
+            <li class="boxli">Consulta, Información Y Materiales Interdisciplinares</li>
+            <li class="boxli">Deportes Y Actividades De Ocio Al Aire Libre</li>
+            <li class="boxli">Derecho</li>
+            <li class="boxli">Economía, Finanzas, Empresa Y Gestión</li>
+            <li class="boxli">Estilos de Vida, Aflicciones Y Ocio</li>
+            <li class="boxli">Ficción Y Temas Afines</li>
+            <li class="boxli">Filosofía Y Religión</li>
+            <li class="boxli">Historia Y Arqueología</li>
+            <li class="boxli">Infantiles, Juveniles y Didácticos</li>
+            <li class="boxli">Lenguaje Y Lingüística</li>
+            <li class="boxli">Matemáticas Y Ciencias</li>
+            <li class="boxli">Medicina, Enfermería, Veterinaria</li>
+            <li class="boxli">Novela Gráficas, Libros De Cómics, Dibujos Animados</li>
+            <li class="boxli">Salud, Relaciones, Y Desarrollo Personal</li>
+            <li class="boxli">Sociedad Y Ciencias Sociales</li>
+            <li class="boxli">Tecnología, Ingeniería, Agricultura, Procesos Industriales</li>
+        </ul>
+    </div>
+
 
 
 
@@ -68,7 +101,7 @@
                 <img src="../imagenes/Siempre-has-Sido-tú.webp" alt="Libro Destacado 1">
             </div>
             <div class="informacion">
-                <h3>Libro Destacado 1</h3>
+                <h3>Siempre has Sido tú</h3>
                 <p>Descubre una historia emocionante sobre amor, destino y segundas oportunidades. En "Siempre has sido tú", los personajes se entrelazan en un tejido de encuentros fortuitos que desafían las expectativas y demuestran que el destino puede tener un plan sorprendente para cada uno.</p>
             </div>
         </div>
@@ -78,7 +111,7 @@
                 <img src="../imagenes/El-Instinto-Científico.webp" alt="Libro Destacado 2">
             </div>
             <div class="informacion">
-                <h3>Libro Destacado 2</h3>
+                <h3>El Instinto Científico</h3>
                 <p>Embárcate en un viaje fascinante hacia el mundo de la ciencia y la curiosidad en "El instinto científico". Este libro explora la mente de los grandes pensadores y científicos a lo largo de la historia, revelando cómo su instinto inquisitivo cambió el curso de la humanidad. Una lectura cautivadora para los amantes de la ciencia.</p>
             </div>
         </div>
@@ -88,7 +121,7 @@
                 <img src="../imagenes/Generacion-Dopamina.webp" alt="Libro Destacado 3">
             </div>
             <div class="informacion">
-                <h3>Libro Destacado 3</h3>
+                <h3>Generacion Dopamina</h3>
                 <p>Adéntrate en la era digital con "Generación Dopamina", una obra que examina cómo la tecnología y las redes sociales han transformado nuestra forma de vivir. Desde la búsqueda constante de validación hasta la conexión instantánea, este libro ofrece una reflexión provocadora sobre la influencia de la dopamina en nuestra sociedad moderna.</p>
             </div>
         </div>
