--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -58,7 +58,7 @@
     </header>
 </header>
 
-<div>
+<div class="banner3">
 
     <img src="../imagenes/banner3.webp" alt="">
    
@@ -75,12 +75,12 @@
         <div class="item">
             <img src="../imagenes/Kokoro.webp" alt="Artículo 4">
             <h3>Kokoro</h3>
-            <p class="description">Descripción del artículo 4...</p>
+            <p class="description">Ficción Clásica</p>
         </div>
         <div class="item">
             <img src="../imagenes/Holly.webp" alt="Artículo 7">
             <h3>Holly</h3>
-            <p class="description">Descripción del artículo 7...</p>
+            <p class="description">Thriller</p>
         </div>
     </div>
 
@@ -89,17 +89,17 @@
         <div class="item">
             <img src="../imagenes/Hierba.webp" alt="Artículo 2">
             <h3>Hierba</h3>
-            <p class="description">Descripción del artículo 2...</p>
+            <p class="description">Comics Y Dibujos Animados</p>
         </div>
         <div class="item">
             <img src="../imagenes/Colmillo Blanco.webp" alt="Artículo 5">
             <h3>Colmillo Blanco</h3>
-            <p class="description">Descripción del artículo 5...</p>
+            <p class="description">Ficción Clásica</p>
         </div>
         <div class="item">
             <img src="../imagenes/Divina-Comedia.webp" alt="Artículo 8">
             <h3>Divina Comedia</h3>
-            <p class="description">Descripción del artículo 8...</p>
+            <p class="description">Filosofía Antigua Griega Y Romana</p>
         </div>
     </div>
 
@@ -108,22 +108,23 @@
         <div class="item">
             <img src="../imagenes/El método-Silva-de-control-mental.webp" alt="Artículo 3">
             <h3>El método Silva de control mental</h3>
-            <p class="description">Descripción del artículo 3...</p>
+            <p class="description">Trastornos Mentales Y Psiquiátricos</p>
         </div>
         <div class="item">
             <img src="../imagenes/El-Banquete.webp" alt="Artículo 6">
             <h3>El Banquete</h3>
-            <p class="description">Descripción del artículo 6...</p>
+            <p class="description">
+                Textos Antiguos, Clásicos Y Medievales</p>
         </div>
         <div class="item">
             <img src="../imagenes/El-Kybalión.webp" alt="Artículo 9">
             <h3>El Kybalión</h3>
-            <p class="description">Descripción del artículo 9...</p>
+            <p class="description">Magia, Alquimia Y Pensamiento Hermético</p>
         </div>
     </div>
 </div>
 
-    <div>
+    <div class="banner4">
 
         <img src="../imagenes/banner.5.webp" alt="">
 
