agrego url de imagenes para SEO

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -21,7 +21,7 @@
     <!--keywords / palabras claves-->
 
     <!--opengraph-->
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://mi-biblioteca-pi.vercel.app/imagenes/banner3.webp">
     <meta property="og:description" content="Nuestro extenso catálogo te ofrece una variedad inigualable de libros en todos los géneros. Busca, explora y encuentra exactamente lo que necesitas para tu próxima gran lectura">
     <meta property="og:title" content="Catálogo Completo - Explora Nuestro Amplio Rango de Libros">
     <!--opengraph-->
