--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
      <!--keywords / palabras claves-->
  
      <!--opengraph-->
-     <meta property="og:image" content="">
+     <meta property="og:image" content="https://mi-biblioteca-pi.vercel.app/imagenes/image.jpg">
      <meta property="og:description" content="Conéctate con nosotros para cualquier consulta o soporte. Nuestro equipo está listo para ayudarte en tu experiencia de compra de libros y resolver tus dudas">
      <meta property="og:title" content="Contacta con Nosotros - Asistencia y Soporte de Librería">
      <!--opengraph-->
