--- a/pages/libros_destacados.html
+++ b/pages/libros_destacados.html
@@ -21,7 +21,7 @@
     <!--keywords / palabras claves-->
 
     <!--opengraph-->
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://mi-biblioteca-pi.vercel.app/imagenes/Siempre-has-Sido-t%C3%BA.webp">
     <meta property="og:description" content="Descubre nuestra cuidada selección de libros destacados. Aquí encontrarás títulos que están haciendo historia en el mundo literario y que son imprescindibles en tu colección">
     <meta property="og:title" content="Libros Destacados - Descubre Títulos Imprescindibles">
     <!--opengraph-->
