--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -21,7 +21,7 @@
     <!--keywords / palabras claves-->
 
     <!--opengraph-->
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://mi-biblioteca-pi.vercel.app/imagenes/De-Sangre-y-Cenizas.webp">
     <meta property="og:description" content="Mantente al día con las últimas novedades del mundo literario. Aquí encontrarás los recién llegados y los próximos grandes éxitos que no te puedes perder">
     <meta property="og:title" content="Novedades Literarias - Últimos Lanzamientos y Próximas Publicaciones">
     <!--opengraph-->
